[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Ships/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Libraries/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Ships/Player/States/Move.gd" type="Script" id=3]
[ext_resource path="res://src/Ships/Player/States/Travel.gd" type="Script" id=4]
[ext_resource path="res://src/Ships/Player/States/Dock.gd" type="Script" id=5]
[ext_resource path="res://src/Ships/Player/PlayerShip.gd" type="Script" id=6]
[ext_resource path="res://src/Ships/Player/States/Precision.gd" type="Script" id=7]
[ext_resource path="res://src/Ships/Player/player_map_icon.tres" type="Resource" id=8]
[ext_resource path="res://src/Ships/Player/PlayerGun.gd" type="Script" id=9]
[ext_resource path="res://src/Ships/Player/Cargo.gd" type="Script" id=10]
[ext_resource path="res://src/VFX/PopEffect.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/UI/PlayerUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Ships/Player/UIBarRig.gd" type="Script" id=13]
[ext_resource path="res://src/Ships/Guns/Projectiles/PlasmaShotPlayer.tscn" type="PackedScene" id=14]

[node name="PlayerShip" groups=[
"Player",
] instance=ExtResource( 1 )]
collision_mask = 14
script = ExtResource( 6 )
projectile_mask = 6
PopEffect = ExtResource( 11 )
map_icon = ExtResource( 8 )

[node name="StateMachine" type="Node" parent="." index="2"]
script = ExtResource( 2 )
initial_state = NodePath("Move/Travel")

[node name="Move" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 3 )
acceleration_max = 13.0
linear_speed_max = 325.0
drag_linear_coeff = 0.04
angular_speed_max = 140
angular_acceleration_max = 17.0

[node name="Travel" type="Node" parent="StateMachine/Move" index="0"]
script = ExtResource( 4 )

[node name="Dock" type="Node" parent="StateMachine/Move" index="1"]
script = ExtResource( 5 )

[node name="Precision" type="Node" parent="StateMachine/Move" index="2"]
script = ExtResource( 7 )

[node name="Gun" parent="." index="3"]
script = ExtResource( 9 )
Projectile = ExtResource( 14 )

[node name="CameraTransform" type="RemoteTransform2D" parent="." index="4"]

[node name="UITransform" type="RemoteTransform2D" parent="." index="5"]
remote_path = NodePath("../BarRig")
update_rotation = false

[node name="MapTimer" type="Timer" parent="." index="6"]

[node name="BarRig" type="Node2D" parent="." index="7"]
script = ExtResource( 13 )

[node name="PlayerUI" parent="BarRig" index="0" instance=ExtResource( 12 )]
margin_top = 30.0
margin_bottom = 42.0

[node name="Cargo" type="Node" parent="." index="8"]
script = ExtResource( 10 )
